@@ -3,7 +3,7 @@
 # $Id$
 
 use strict;
-use Test::More tests => 19;
+use Test::More tests => 21;
 use File::Spec::Functions;
 
 BEGIN { use_ok('App::Info::RDBMS::PostgreSQL') }
@@ -11,7 +11,10 @@ BEGIN { use_ok('App::Info::RDBMS::PostgreSQL') }
 my $ext = $^O eq 'MSWin32' ? '.bat' : '';
 my $bin_dir = catdir 't', 'scripts';
 $bin_dir = catdir 't', 'bin' unless -d $bin_dir;
-my $executable = catfile $bin_dir, "postgres$ext";
+my %exes = (
+    map { $_ => catfile $bin_dir, "$_$ext" }
+      qw(postgres createdb)
+);
 
 ok( my $pg = App::Info::RDBMS::PostgreSQL->new(
     search_bin_dirs => $bin_dir,
@@ -29,7 +32,9 @@ is( $pg->major_version, '8', "Test major version" );
 is( $pg->minor_version, '0', "Test minor version" );
 is( $pg->patch_version, '0', "Test patch version" );
 is( $pg->lib_dir, 't/testlib', "Test lib dir" );
-is( $pg->executable, $executable, "Test bin dir" );
+is( $pg->executable, $exes{postgres}, "Test executable" );
+is( $pg->postgres, $exes{postgres}, "Test postgres" );
+is( $pg->createdb, $exes{createdb}, "Test createdb" );
 is( $pg->bin_dir, 't/bin', "Test bin dir" );
 is( $pg->so_lib_dir, 't/testlib', "Test so lib dir" );
 is( $pg->inc_dir, "t/testinc", "Test inc dir" );
